--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
   "scripts": {
-    "dev": "next dev"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@mui/icons-material": "^5.8.0",
     "@mui/material": "^5.8.0",
-    "next": "^12.1.5",
+    "next": "^15.2.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-responsive-carousel": "^3.2.23"
